<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="PrivateResource">Godspeed\u00AE</string>
    <string name="app_name_for_directory">GodSpeed</string>
    <string name="facebook_app_id">216577716131501</string>
    <string name="btn_add_contact"><u>Logout</u></string>
    <string name="sharing_text">Your sharing text goes here…</string>
    <string name="share_title">Share Screenshot</string>
    <string name="screenshot_take_failed">Failed to take screenshot!!</string>
    <string name="wait">Please wait…</string>
    <string name="full_page_screenshot">Full Page Screenshot</string>
    <string name="hidden_text">Hidden Text</string>
    <string name="custom_page_screenshot">Custom Page Screenshot</string>
    <string name="continues">Continue</string>
    <string name="begin">Begin</string>
    <string name="ChangePassWord">Change Password</string>
    <string name="Matric">Matric</string>
    <string name="Imperial">Imperial</string>
    <string name="KG">KG</string>
    <string name="CM">CM</string>
    <string name="LB">LB</string>
    <string name="IN">IN</string>
    <string name="previous">Go to previous</string>
    <string name="next">Go to next</string>
    <string name="calendar">Calendar</string>
    <string name="double_dots" translatable="false">:</string>
    <string name="close">Close</string>
    <string name="ok">OK</string>
    <string name="please_wait">Please wait</string>
    <string name="internet_error">Check your internet connetion and try again.</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="signup">Sign up</string>
    <string name="update_profile">Update Profile</string>
    <string name="signup_coach">Sign Up As Coach</string>
    <string name="signup_athlete">Sign Up As Athlete</string>
    <string name="build_better">Build Better</string>
    <string name="athletes">Athletes</string>
    <string name="Weight1">Weight</string>
    <string name="coachboard">Coachboard</string>
    <string name="future">Futures</string>
    <string name="champions">Champions</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_password">Remember password</string>
    <string name="forgot_password_for_heading">Forgot Password</string>
    <string name="train_my">Train My</string>
    <string name="train">Train</string>
    <string name="absent">Absent</string>
    <string name="present">Present</string>
    <string name="weight1_tag">weight</string>
    <string name="bodyfat1_tag">body_fat</string>
    <string name="smm1_tag">smm</string>
    <string name="height1_tag">height</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="logout">Logout</string>
    <string name="logout_">LOGOUT</string>
    <string name="help">Help</string>
    <string name="home">A T H L E T E    P R O F I L E</string>
    <string name="training">Training</string>
    <string name="exercise_type">Exercise Type</string>
    <string name="analytics">Analytics</string>
    <string name="my_profile">My Profile</string>
    <string name="profile">Profile</string>
    <string name="programs">Programs</string>
    <string name="account">Account</string>
    <string name="comparative_analytics">Comparative Analytics</string>
    <string name="activation">Activation</string>
    <string name="build">Build</string>
    <string name="energy">Energy</string>
    <string name="regen">Re-gen</string>
    <string name="fuel">Fuel</string>
    <string name="add_fuel">Add Fuel</string>
    <string name="skills">Skills</string>
    <string name="plan_program">Plan Program</string>
    <string name="select_dosage">SELECT DOSAGE</string>
    <string name="select_team_for_assign_work">Select Team</string>
    <string name="select_parameter">Select Parameter</string>
    <string name="ground_mobility">Ground Mobility</string>
    <string name="add_remove_excercise">Add/Remove Exercise</string>
    <string name="add_excercise">Add Exercise</string>
    <string name="complex">Complex</string>
    <string name="delete">Delete</string>
    <string name="add_set">Add Set</string>
    <string name="add_athlete">Add Athlete</string>
    <string name="add_another_coach">Add Another Coach</string>
    <string name="add_coach">Add Coach</string>
    <string name="add_team">Add Team</string>
    <string name="watch_video">Watch Video</string>
    <string name="exercise">Exercise</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="agree">Agree</string>
    <string name="question_one">How many hours did you sleep last night?</string>
    <string name="question_two">How was the quality of your sleep?</string>
    <string name="question_three">Are you tired?</string>
    <string name="question_four">Are you sore?</string>
    <string name="question_five">Are you stressed?</string>
    <string name="question_six">If so, why are you stressed?</string>
    <string name="question_seven">How may glass of water you drink yesterday?</string>
    <string name="question_eight">How many meals did you eat?</string>
    <string name="great">Great</string>
    <string name="good">Good</string>
    <string name="moderate">moderate</string>
    <string name="bad">Bad</string>
    <string name="horrible">Horrible</string>
    <string name="questionaries">Questionnaire</string>
    <string name="yes">Yes</string>
    <string name="a_little">A Little</string>
    <string name="no">No</string>
    <string name="chest">Chest</string>
    <string name="back">Back</string>
    <string name="shoulders">Shoulders</string>
    <string name="Glutes">Glutes</string>
    <string name="harmstring">Hamstrings, Quads, Calves, Neck</string>
    <string name="relationship">Relationship</string>
    <string name="work">Work</string>
    <string name="injury">Injury</string>
    <string name="set">Set</string>
    <string name="reps">Reps</string>
    <string name="wt">Wt</string>
    <string name="per">Per</string>
    <string name="lb">lb</string>
    <string name="lbs">lbs</string>
    <string name="in">in</string>
    <string name="kg">kg</string>
    <string name="regular">Regular</string>
    <string name="change_exercise">Change Exercise</string>
    <string name="movement_prep">Movement Prep</string>
    <string name="movement_skill">Movement Skill</string>
    <string name="cancel" tools:ignore="PrivateResource">Cancel</string>
    <string name="done">Done</string>
    <string name="Submit">Submit</string>
    <string name="skip">Skip</string>
    <string name="weight">Weight</string>
    <string name="tempo">Tempo</string>
    <string name="athleteName">Athlete Name</string>
    <string name="overAll">Overall\nAverages</string>
    <string name="average">Average</string>
    <string name="velocity">Velocity</string>
    <string name="power">Power</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="max_power">Max Power</string>
    <string name="max_hr">Max HR</string>
    <string name="max_lift">Max Lift %</string>
    <string name="watts">Watts</string>
    <string name="beats_per_min">beats/min</string>
    <string name="sleep">Sleep</string>
    <string name="ms">m/s</string>
    <string name="avg">Avg</string>
    <string name="avg_hr">Avg HR</string>
    <string name="max">Max</string>
    <string name="athletes_profile">Athlete Profile</string>
    <string name="athletes_filecase">Athlete Filecase</string>
    <string name="filecase">Filecase</string>
    <string name="update_info">Update Info</string>
    <string name="session_review">Session Review</string>
    <string name="download_history">Download History</string>
    <string name="download_filecase">Download Filecase</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="week">Week</string>
    <string name="set_reps_rates">Set reps weight</string>
    <string name="height">Height</string>
    <string name="body_fat">Body Fat</string>
    <string name="smm">SMM</string>
    <string name="individuals">Individuals</string>
    <string name="teams">Teams</string>
    <string name="Bodyfat">Body Fat</string>
    <string name="SMM">SMM</string>
    <string name="Team2">Team 2</string>
    <string name="WeightLB">Weight</string>
    <string name="Height">Height</string>
    <string name="HeightIN">Height in IN</string>
    <string name="HeightinIN">Height (IN)</string>
    <string name="team">Team</string>
    <string name="background_theme">Background Theme</string>
    <string name="tap_background_theme">Tap Here To Select Background Theme</string>
    <string name="select_team">Select Teams To Compare</string>
    <string name="exercise_selection">Exercise - </string>
    <string name="peak">Peak</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="health_profile">Health Profile</string>
    <string name="body_composition_history">Body Composition History</string>
    <string name="pbf">PBF</string>
    <string name="ecw_tbw">ECW/TBW</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="print">Print</string>
    <string name="print_filecase">Print Filecase</string>
    <string name="injuris">Injuries</string>
    <string name="add_injuris">Add New Injury</string>
    <string name="muscular">Muscular</string>
    <string name="bone">Bone</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="view_note">View Note</string>
    <string name="injury_part">Injury Part</string>
    <string name="reported_on">Reported On</string>
    <string name="recovered">Recovered</string>
    <string name="not_recovered">Not Recovered</string>
    <string name="activation_duration">Activation Duration</string>
    <string name="build_duration">Build Duration</string>
    <string name="energy_duration">Energy Duration</string>
    <string name="regen_duration">Re-Gen Duration</string>
    <string name="duration_athlete">Duration puts by Athlete</string>
    <string name="metrics">Metrices</string>
    <string name="workout">Workout</string>
    <string name="day">Day</string>
    <string name="jump_height">Jump Height</string>
    <string name="raw_hr">RAW HR</string>
    <string name="rsi">RSI</string>
    <string name="agility_time">Agility Time</string>
    <string name="time">Time</string>
    <string name="vertical_jump">Vertical Jump</string>
    <string name="sprint_time">Sprint Time</string>
    <string name="total_carbo">Total Carbohydrates(g)</string>
    <string name="total_fat">Total Fat(g)</string>
    <string name="total_protein">Total Protein(g)</string>
    <string name="calori_hint">Enter calorie amount</string>
    <string name="total_Carbo_hint">Enter carbohydrates amount</string>
    <string name="total_fat_hint">Enter fat amount</string>
    <string name="total_protein_hint">Enter protein amount</string>
    <string name="time_hint">Enter time</string>
    <string name="brand_name">Brand Name</string>
    <string name="optional">Optional</string>
    <string name="required">Required</string>
    <string name="description">Description</string>
    <string name="serving_size">Serving Size</string>
    <string name="serving_per_container">Servings Per Container</string>
    <string name="brand_name_hint">ex. Campbell\'s</string>
    <string name="description_hint">ex. Chiken Soup</string>
    <string name="serving_size_hint">ex. 1 Cup</string>
    <string name="serving_per_container_hint">ex. 1</string>
    <string name="create_food">Create Food</string>
    <string name="calories">Calories</string>
</resources>